--- a/src/global.less
+++ b/src/global.less
@@ -1,5 +1,6 @@
 @import '~antd/es/style/themes/default.less';
-
+// @import '~antd/lib/style/themes/default.less';
+// @import '~antd/dist/antd.less'; // 引入官方提供的 less 样式入口文件
 html,
 body,
 #root {
